--- a/dot_config/environment.tmpl
+++ b/dot_config/environment.tmpl
@@ -35,3 +35,13 @@ export GOPATH="$HOME/go"
 
 # Context System
 export FILE_CONTEXT_DIR="$HOME/.local/share/file-context"
+
+# Application-specific XDG compliance
+# Force various tools to respect XDG Base Directories
+export DOCKER_CONFIG="$XDG_CONFIG_HOME/docker"
+export MACHINE_STORAGE_PATH="$XDG_DATA_HOME/docker-machine"
+export CARGO_HOME="$XDG_DATA_HOME/cargo"
+export RUSTUP_HOME="$XDG_DATA_HOME/rustup"
+export NODE_REPL_HISTORY="$XDG_STATE_HOME/node_repl_history"
+export NPM_CONFIG_USERCONFIG="$XDG_CONFIG_HOME/npm/npmrc"
+export LESSHISTFILE="$XDG_STATE_HOME/less/history"
